2004-06-27  Carlos Morgado  <chbm gnome.org>

	* libbalsa/imap/imap-handle.c (imap_mbox_connect): 
	clear tls status on forcefull disconnect
	(it leaked passwords over non tls gah!)

2004-06-19  Pawel Salek

	* libbalsa/libbalsa.c: disable debugging output.
	* libbalsa/imap/*.c: check the connection states more carefully.
	
2004-06-16 07:41  PeterB

	* libbalsa/mailbox.c: flush the display instead of syncing it, to
	improve performance especially on a remote display.

2004-06-15 10:59  PeterB

	* src/balsa-app.c, src/balsa-app.h, src/balsa-index.c,
	libbalsa/mailbox.c, libbalsa/mailbox.h, libbalsa/misc.c,
	libbalsa/misc.h, src/balsa-mblist.c, src/mailbox-conf.c,
	src/mailbox-node.c, src/main-window.c, src/main.c,
	src/pref-manager.c, src/save-restore.c, src/sendmsg-window.c:
	implement accessors for LibBalsaMailboxView; use
	libbalsa_mailbox_view_default for default values; don't put default
	values in the config file; implement libbalsa_urldecode to get url
	from config key; remove balsa_app.threading_type and
	balsa_app.mailbox_views.

2004-06-15 09:51  PeterB

	* libbalsa/: mailbox.c, mailbox_imap.c: check for NULL message and
	message-entry.

2004-06-13 09:29  PeterB

	* src/: balsa-index.c, balsa-index.h, main-window.c: implement and
	use balsa_index_expunge, to block the selection-changed handler
	while expunging.

2004-06-13  Carlos Morgado  <chbm gnome.org>

	* libbalsa/message.c: make build with DEBUG

2004-06-10  Pawel Salek

	* src/balsa-message.c: proper msg popup menus (Albrecht Dreß).
	* src/folder-conf.c: use gtk_dialog_run as required by spec.

2004-06-08  Pawel Salek

	* libbalsa/mailbox-filter.c: compile.
	* libbalsa/imap/imap-commands.c: set the readonly argument
	also when the handle has been already selected.
	* libbalsa/mailbox_{maildir,mbox,mh}.c: set readonly flag
	in a more robust way.

2004-06-07 16:51  PeterB

	* libbalsa/: mailbox_maildir.c, mailbox_mbox.c, mailbox_mh.c:
	manage `recent' flag.
	* libbalsa/: message.c, message.h: drop